--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Your Name]</p>
+        <p>[Stephen]</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Your Hobbies]</p>
+        <p>[Hiking]</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Your Favorite Food]</p>
+        <p>[pizza from Dominos]</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About You]</p>
+        <p>[I got bit by a black widow]</p>
     </div>
 </div>
 
