--- a/index.html
+++ b/index.html
@@ -81,56 +81,56 @@
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My name is <strong>[Your Name]</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
+    <p>Hello! My name is <strong>[Stephen Cruz]</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Your Name]</p>
+        <p>[Stephen Cruz]</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Your Hobbies]</p>
+        <p>[Reading and going for a run]</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Your Favorite Food]</p>
+        <p>[yogurt]</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About You]</p>
+        <p>[I've had more surgeies done to me then anyone in my family]</p>
     </div>
 </div>
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
-    <p>Hello! My groupmate's name is <strong>[Your Name]</strong>. Here is what I've learned about them.</p>
+    <p>Hello! My groupmate's name is <strong>[u;]</strong>. Here is what I've learned about them.</p>
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Their Name]</p>
+        <p>[Cristian Hernandez Juan]</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Their Hobbies]</p>
-    </div>
+        <p>[]</p>
+    </div>Playing video games, reading books, and going on runs
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Their Favorite Food]</p>
+        <p>[Pizza]</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About Them]</p>
+        <p>[I have never broken a single bone so far]</p>
     </div>
 </div>
 
 <footer>
-    <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+    <p>&copy; 2024 [Stephen Cruz. All rights reserved.</p>
 </footer>
 
 </body>
