--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 [Stephen Cruz. All rights reserved.</p>
+    <p>&copy; 2024 Stephen Cruz. All rights reserved.</p>
 </footer>
 
 </body>
